--- a/code/autom4te.cache/traces.1
+++ b/code/autom4te.cache/traces.1
@@ -603,24 +603,25 @@ m4trace:configure.ac:33: -1- AC_CONFIG_FILES([Makefile
                  src/testserver/Makefile
                  src/testclient/Makefile
                  src/threadpool2/Makefile
+                 src/threadpool3/Makefile
                  src/doublequeue/Makefile
                  test/Makefile
                  ])
-m4trace:configure.ac:51: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
-m4trace:configure.ac:51: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
-m4trace:configure.ac:51: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.ac:51: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
-m4trace:configure.ac:51: -1- AC_SUBST_TRACE([LTLIBOBJS])
-m4trace:configure.ac:51: -1- m4_pattern_allow([^LTLIBOBJS$])
-m4trace:configure.ac:51: -1- AC_SUBST_TRACE([top_builddir])
-m4trace:configure.ac:51: -1- AC_SUBST_TRACE([top_build_prefix])
-m4trace:configure.ac:51: -1- AC_SUBST_TRACE([srcdir])
-m4trace:configure.ac:51: -1- AC_SUBST_TRACE([abs_srcdir])
-m4trace:configure.ac:51: -1- AC_SUBST_TRACE([top_srcdir])
-m4trace:configure.ac:51: -1- AC_SUBST_TRACE([abs_top_srcdir])
-m4trace:configure.ac:51: -1- AC_SUBST_TRACE([builddir])
-m4trace:configure.ac:51: -1- AC_SUBST_TRACE([abs_builddir])
-m4trace:configure.ac:51: -1- AC_SUBST_TRACE([abs_top_builddir])
-m4trace:configure.ac:51: -1- AC_SUBST_TRACE([INSTALL])
-m4trace:configure.ac:51: -1- AC_SUBST_TRACE([MKDIR_P])
-m4trace:configure.ac:51: -1- AC_REQUIRE_AUX_FILE([ltmain.sh])
+m4trace:configure.ac:52: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
+m4trace:configure.ac:52: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
+m4trace:configure.ac:52: -1- m4_pattern_allow([^LIB@&t@OBJS$])
+m4trace:configure.ac:52: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
+m4trace:configure.ac:52: -1- AC_SUBST_TRACE([LTLIBOBJS])
+m4trace:configure.ac:52: -1- m4_pattern_allow([^LTLIBOBJS$])
+m4trace:configure.ac:52: -1- AC_SUBST_TRACE([top_builddir])
+m4trace:configure.ac:52: -1- AC_SUBST_TRACE([top_build_prefix])
+m4trace:configure.ac:52: -1- AC_SUBST_TRACE([srcdir])
+m4trace:configure.ac:52: -1- AC_SUBST_TRACE([abs_srcdir])
+m4trace:configure.ac:52: -1- AC_SUBST_TRACE([top_srcdir])
+m4trace:configure.ac:52: -1- AC_SUBST_TRACE([abs_top_srcdir])
+m4trace:configure.ac:52: -1- AC_SUBST_TRACE([builddir])
+m4trace:configure.ac:52: -1- AC_SUBST_TRACE([abs_builddir])
+m4trace:configure.ac:52: -1- AC_SUBST_TRACE([abs_top_builddir])
+m4trace:configure.ac:52: -1- AC_SUBST_TRACE([INSTALL])
+m4trace:configure.ac:52: -1- AC_SUBST_TRACE([MKDIR_P])
+m4trace:configure.ac:52: -1- AC_REQUIRE_AUX_FILE([ltmain.sh])
